--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -37,14 +37,16 @@
                 {{ page.body|richtext }}
             </article>
 
-            {% for item in page.gallery_images.all %}
+                {% for item in page.gallery_images.all %}
                 <div style="float: inline-start; margin: 10px">
-                    {% image item.image fill-320x240 %}
+                {% image item.image fill-320x240 %}
                     <p>{{ item.caption }}</p>
                 </div>
-            {% endfor %}    
+            {% endfor %}   
 
-            {% include "blog/includes/comments.html" with page=page %}
+            <div class="inline-block w-full">
+                {% include "blog/includes/comments.html" with page=page %}
+            </div>
 
             <a href="{{ page.get_parent.url }}" class="inline-block w-full p-4 bg-gray-100 text-center hover:bg-gray-200 transition-colors" title="{% trans "Return to blog" %}">
                 🔙 {% trans "Return to blog" %}
