--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -39,7 +39,7 @@
 
             <div class="flex flex-row flex-wrap p-1">
                 {% for item in page.gallery_images.all %}
-                    <div class="flex-col p-1">
+                    <div class="flex-col p-1" style="width: 320px">
                         {% image item.image fill-320x240 %}
                         <p>{{ item.caption }}</p>
                     </div>
