--- a/src/blog/templates/blog/blog_index_page.html
+++ b/src/blog/templates/blog/blog_index_page.html
@@ -23,18 +23,36 @@
                     {% else %}
                         <div class="h-80 bg-gray-300"></div>
                     {% endif %}
-                    <div class="h-full absolute top-0 p-4 w-full flex flex-col justify-end bg-gradient-to-t to-transparent from-yellow-500">
-                        <h2 class="bold text-4xl mb-0 text-black group-hover:underline hover:underline decoration-wavy">
-                            {{ post.title }}
-                        </h2>
-                        <p class="text-sm">{{ post.specific.date|date:"F j, Y" }}</p>
-                        <p class="text-sm">
-                            {% if post.specific.intro %}
-                                {{ post.specific.intro }}
-                            {% else %}
-                                {{ post.specific.body|richtext|slice:":500" }}
+                    
+                    <div class="h-full absolute top-0 p-4 w-full flex flex-col justify-between bg-gradient-to-t to-transparent from-yellow-500">
+                        <div class="flex justify-end">
+                            {% with authors=post.authors.all %}
+                            {% if authors %}
+                                <ul class="flex flex-col gap-3">
+                                    {% for author in authors %}
+                                        <li class="flex flex-row items-center gap-2 text-sm">
+                                            {% image author.author_image fill-40x40 style="vertical-align: middle; border-radius: 9999px" %}
+                                        </li>
+                                    {% endfor %}
+                                </ul>
                             {% endif %}
-                        </p>
+                        {% endwith %}
+                        </div>
+
+                        <div>
+                            <h2 class="bold text-4xl mb-0 text-black group-hover:underline hover:underline decoration-wavy">
+                                {{ post.title }}
+                            </h2>
+                            <p class="text-sm">{{ post.specific.date|date:"F j, Y" }}</p>
+
+                            <p class="text-sm">
+                                {% if post.specific.intro %}
+                                    {{ post.specific.intro }}
+                                {% else %}
+                                    {{ post.specific.body|richtext|slice:":500" }}
+                                {% endif %}
+                            </p>
+                        </div>
                     </div>
                 </div>
             </a>
