--- a/src/brazil_blog/templates/base.html
+++ b/src/brazil_blog/templates/base.html
@@ -42,7 +42,7 @@
         {% include "includes/footer.html" %}
     
         {# Global javascript #}
-        <script type="text/javascript" src="{% static 'js/mysite.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/brazil_blog.js' %}"></script>
     
         {% block extra_js %}
         {# Override this in templates to add extra javascript #}
