--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -40,8 +40,8 @@
             <div class="p-4 grid md:grid-cols-2 lg:grid-cols-3 gap-4">
                 {% for item in page.gallery_images.all %}
                 <div class="bg-white rounded-xl overflow-hidden drop-shadow group hover:rotate-3 transition-transform">
-                    {% image item.image fill-703x408 %}
-                    <p style="padding: 0.5rem">{{ item.caption }}</p>
+                    {% image item.image fill-480x360 %}
+                    <p class="p-2">{{ item.caption }}</p>
                 </div>
             {% endfor %}   
             </div>
