author avatar on blog post and index page #12

--- a/src/blog/templates/blog/blog_index_page.html
+++ b/src/blog/templates/blog/blog_index_page.html
@@ -38,7 +38,8 @@
                                     {% endif %}
                                 </p>
                             </div>
-                            <div class="flex flex-col self-end" style="align-self: flex-end;">
+                            <div class="flex flex-col justify-end">
+                                <img src="{{ post.owner.wagtail_userprofile.avatar.url }}" alt="{{ request.user.get_full_name }}" class="rounded-full" style="width: 40px; height: 40px">
                                 <p> {{post.owner.first_name}} </p>                          
                             </div>
                         </div>
