--- a/src/blog/templates/blog/blog_index_page.html
+++ b/src/blog/templates/blog/blog_index_page.html
@@ -39,8 +39,15 @@
                                 </p>
                             </div>
                             <div class="flex flex-col justify-end items-center">
-                                <img src="{{ post.owner.wagtail_userprofile.avatar.url }}" alt="{{ request.user.get_full_name }}" class="rounded-full" style="width: 30px; height: 30px">
-                                <p class="text-sm"> {{post.owner.first_name}} </p>                          
+                                {% if post.owner.wagtail_userprofile.avatar %}
+                                    <img src="{{ post.owner.wagtail_userprofile.avatar.url }}" alt="{{ request.user.get_full_name }}" class="rounded-full" style="width: 30px; height: 30px">
+                                {% endif %}
+                                {% if post.owner.first_name and page.owner.last_name %}
+                                    <p class="text-sm"> {{post.owner.first_name}} </p>
+                                {% else %}   
+                                    <p class="text-sm"> {{post.owner}} </p>
+                                {% endif %}
+     
                             </div>
                         </div>
 
