--- a/src/blog/templates/blog/blog_index_page.html
+++ b/src/blog/templates/blog/blog_index_page.html
@@ -27,14 +27,31 @@
                         <h2 class="bold text-4xl mb-0 text-black group-hover:underline hover:underline decoration-wavy">
                             {{ post.title }}
                         </h2>
-                        <p class="text-sm">{{ post.specific.date|date:"F j, Y" }}</p>
-                        <p class="text-sm">
-                            {% if post.specific.intro %}
-                                {{ post.specific.intro }}
-                            {% else %}
-                                {{ post.specific.body|richtext|slice:":500" }}
-                            {% endif %}
-                        </p>
+                        <div class="flex justify-between gap-4">
+                            <div class="flex flex-col flex-wrap">
+                                <p class="text-sm">{{ post.specific.date|date:"F j, Y" }}</p>
+                                <p class="text-sm">
+                                    {% if post.specific.intro %}
+                                        {{ post.specific.intro }}
+                                    {% else %}
+                                        {{ post.specific.body|richtext|slice:":500" }}
+                                    {% endif %}
+                                </p>
+                            </div>
+                            <div class="flex flex-col justify-end items-center">
+                                {% if post.owner.wagtail_userprofile.avatar %}
+                                    <img src="{{ post.owner.wagtail_userprofile.avatar.url }}" alt="{{ request.user.get_full_name }}" class="rounded-full" style="width: 30px; height: 30px">
+                                {% endif %}
+                                {% if post.owner.first_name and page.owner.last_name %}
+                                    <p class="text-sm"> {{post.owner.first_name}} </p>
+                                {% else %}   
+                                    <p class="text-sm"> {{post.owner}} </p>
+                                {% endif %}
+     
+                            </div>
+                        </div>
+
+
                     </div>
                 </div>
             </a>
