--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -19,8 +19,19 @@
                     <h1 class="bold text-4xl mb-0 text-black">
                         {{ page.title }}
                     </h1>
-                    <div class="flex items-center gap-4">
+                    <div class="flex items-center justify-between gap-4">
                         <p>{{ page.specific.date|date:"F j, Y" }}</p>
+                        <div class="flex flex-row items-center gap-4">
+                            {% if page.owner.first_name and page.owner.last_name %}
+                                <p> {{page.owner.first_name}} {{page.owner.last_name}} </p>
+                            {% else %}
+                                <p> {{page.owner }} </p>
+                            {% endif %}
+
+                            {% if page.owner.wagtail_userprofile.avatar %}
+                                <img src="{{ page.owner.wagtail_userprofile.avatar.url }}" alt="{{ request.user.get_full_name }}" class="rounded-full" style="width: 40px; height: 40px">
+                            {% endif %}
+                        </div>
                     </div>
                     <div class="flex ml-auto items-center gap-4">
                         <p>{{ page.hero_text }}</p>
