feat: Add Tukanchamon image, animation & sound to blog index page

--- a/src/blog/templates/blog/blog_index_page.html
+++ b/src/blog/templates/blog/blog_index_page.html
@@ -57,6 +57,9 @@
             </a>
         {% endfor %}
     </div>
+
+    {% include "blog/includes/tukanchamon.html" %}
+
 </div>
 
 {% endblock %}
