feat: Add cuica course form to blog page

--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -67,6 +67,8 @@
         </div>
     </div>
 </div>
+
 {% include "blog/includes/tukanchamon.html" %}
+{% include "blog/includes/cuica-course-form.html" %}
 
 {% endblock %}
