Add project cuica course form to blog page (#23)
* feat: Add tukanchamon to the blog detail page too

* feat: Add cuica course form to blog page

* chore: Make audio files slightly shorter & snappier

--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -68,4 +68,7 @@
     </div>
 </div>
 
+{% include "blog/includes/tukanchamon.html" %}
+{% include "blog/includes/cuica-course-form.html" %}
+
 {% endblock %}
