feat: Add opt-out functionality for audio and animations
The code changes introduce the opt-out functionality for audio and animations. This functionality allows users to choose whether they want to enable or disable audio and animations on the website.

--- a/src/blog/templates/blog/includes/cuica-course-form.html
+++ b/src/blog/templates/blog/includes/cuica-course-form.html
@@ -25,6 +25,11 @@
         let lastPlayedIndex = -1;
 
         function playRandomCuicaSound() {
+
+            if (optOut) {
+                return;
+            }
+
             let randomIndex;
             do {
                 randomIndex = Math.floor(Math.random() * cuicaSounds.length);
