feat: Update opt-out title to clarify disabling audio and animations

--- a/src/brazil_blog/templates/includes/opt-out.html
+++ b/src/brazil_blog/templates/includes/opt-out.html
@@ -1,7 +1,7 @@
 <div id="opt-out">
     <img src="/static/images/opt-out/opt-in.webp" alt="Opt Out" id="opt-out-icon"
         class="cursor-pointer hidden opacity-0 transition hover:drop-shadow" width="48" height="48"
-        title="Opt out of audio and animations" />
+        title="Opt out of annoying audio and animations" />
 </div>
 
 <script>
