--- a/src/brazil_blog/templates/includes/header.html
+++ b/src/brazil_blog/templates/includes/header.html
@@ -8,8 +8,7 @@
         {% cache 500 static_header %}
         <div class="flex items-center gap-3">
             <a href="{% pageurl site_root %}" class="inline-block">
-                {% picture site_logo format-{webp,avif,jpeg} fill-64x64 bgcolor-3730a3 class="inline-block rounded-full"
-                %}
+                {% picture site_logo format-{webp,avif,jpeg} fill-64x64 bgcolor-3730a3 class="inline-block rounded-full" %}
             </a>
             <a href="/"
                 class="text-black hover:text-black no-underline hover:underline decoration-4 underline-offset-4 decoration-wavy">
