Added: Update blog page date field and date format (#21)
* feat: Update blog page date field to use DateTimeField

Update the `date` field in the `BlogPage` model to use `DateTimeField` instead of `DateField`. This change allows for more precise timestamp information for blog posts and a better sort order on the index page.

* feat: Update date format in blog templates

Update the date format in the `blog_index_page.html` and `blog_page.html` templates to include the time in addition to the date. This change provides more precise timestamp information for blog posts.

* feat: Update base.py to use local time zone

* Update date format in blog templates

--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -20,7 +20,7 @@
                         {{ page.title }}
                     </h1>
                     <div class="flex items-center justify-between gap-4">
-                        <p>{{ page.specific.date|date:"F j, Y" }}</p>
+                        <p>{{ page.specific.date | date:"d-m-Y H:i" }}</p>
                         <div class="flex flex-row items-center gap-4">
                             {% if page.owner.first_name and page.owner.last_name %}
                                 <p> {{page.owner.first_name}} {{page.owner.last_name}} </p>
