feat: Update author display logic in blog templates

--- a/src/blog/templates/blog/blog_index_page.html
+++ b/src/blog/templates/blog/blog_index_page.html
@@ -28,8 +28,8 @@
                                 {% endif %}
                             </div>
                             <div class="flex flex-col justify-end items-center">
-                                {% user_avatar post 'w-8 h-8 rounded-full object-cover' %}
-                                <p class="text-sm">{% user_display_name post %}</p>
+                                {% post_user_avatar post 'w-8 h-8 rounded-full object-cover' %}
+                                <p class="text-sm">{% post_user_display_name post %}</p>
                             </div>
                         </div>
                     </div>
