--- a/src/blog/templates/blog/author_index_page.html
+++ b/src/blog/templates/blog/author_index_page.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load wagtailcore_tags wagtailimages_tags user_tags %}
 
+
 {% block content %}
 <div class="bg-green-700 py-8 flex-grow">
     <div class="max-w-3xl md:max-w-5xl mx-auto p-4">
@@ -20,8 +21,8 @@
                     {% for author in authors %}
                         <a href="{% pageurl author.author_page %}" class="bg-yellow-500 rounded-xl overflow-hidden drop-shadow group hover:rotate-1 transition-transform">
                             <div class="p-4">
-                                <h3 class="text-xl font-semibold text-black group-hover:underline">{% user_display_name post %}</h3>
-                                {% user_avatar post %}
+                                <h3 class="text-xl font-semibold text-black group-hover:underline">{% user_display_name author %}</h3>
+                                {% user_avatar author %}
                             </div>
                         </a>
                     {% empty %}
