--- a/src/brazil_blog/templates/includes/header.html
+++ b/src/brazil_blog/templates/includes/header.html
@@ -18,7 +18,7 @@
         <ul class="flex items-center gap-3">
             {% for menuitem in site_root.get_children.live.in_menu %}
             <li>
-                <a href="{% pageurl menuitem %}" class="text-blue-800 hover:text-white transition-colors">
+                <a href="{% pageurl menuitem %}" class="drop-shadow text-white hover:text-blue-800 transition-colors">
                     {{ menuitem.title }}
                 </a>
             </li>
