fix(style): Fix styling on author page

--- a/src/blog/templates/blog/author_page.html
+++ b/src/blog/templates/blog/author_page.html
@@ -29,7 +29,7 @@
                                 {% else %}
                                     <div class="h-full bg-gray-300"></div>
                                 {% endif %}
-                                <div class="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-yellow-500 to-transparent">
+                                <div class="h-full absolute top-0 p-4 w-full flex flex-col justify-end bg-gradient-to-t to-transparent from-yellow-500">
                                     <h3 class="text-xl font-semibold text-black group-hover:underline">{{ post.title }}</h3>
                                     <p class="text-sm text-gray-800">{{ post.date|date:"d-m-Y" }}</p>
                                 </div>
